# VTOP_API

./: .gitignore  LICENCE  Pipfile  Procfile  README.md  TODO.md  main.py  pyproject.toml  requirements.in  requirements.test.in  requirements.txt  setup.cfg  start.sh  test_app.py  vercel.json  vtop_handler_examples.py
src/: __init__.py  _test.py  app.py  const.py  decorators.py  test_app.py  utils.py
src/custom_exceptions/: UsernamePasswordException.py  __init__.py
src/parsers/: __init__.py  parse_acadhistory.py  parse_exam_schedule.py  parse_faculty_details.py  parsers.py  profile_parser.py  time_table_parser.py
src/validators/: __init__.py  student_input_validator.py
src/vtop_handler/: __init__.py  academic_calender_handler.py  bitmaps.json  captcha_solver.py  constants.py  course_page_handler.py  curriculum.py  faculty_handler.py  marks_view.py  parsers.py  payloads.py  session_generator.py  student_academic_history.py  student_attendance.py  student_exam_schedule.py  student_profile.py  student_timetable.py  utils.py  weights.json
src/vtop_handler/Exceptions/: __init__.py  bad_request.py  captcha_failure.py  custom_base_exception.py  invalid_credentials.py  invalid_crsf_token.py
src/vtop_handler/course_page/: get_semester_names.py
src/vtop_handler/models/: __init__.py  curriculm_models.py
src/vtop_handler/parsers/: __init__.py  curriculm.py  parse_academic_calender.py  parse_acadhistory.py  parse_attendance.py  parse_course_page.py  parse_exam_schedule.py  (+4 more)
tests/: test_all_details.py  test_single_semester_marks.py  user_names_passwords.py
