[metadata]
name = vtop_handler 
version = 0.0.0
description = A simple vtop handler api 
author = Vangipuram Srinivasa Sarath Chandra
author_email = vssarathc04@gmail.com
license = MIT 
license_file = LICENSE
platform = any
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages =
    vtop_handler
install_requires =
    aiohttp
    beautifulsoup4
    pydantic
    pandas
python_requires = >=3.8
package_dir =
    = src
zip_safe = False